# s3-resizer

./: .gitignore  README.md
cloudformation/: attach-to-existing-s3.json  create-base-stack.json
cloudfront/: rewrite-width-parameter-s3.js
lambda/: Cross.toml
lambda/generate-sizes/: Cargo.toml  build-lambda.sh  cross.sh
lambda/generate-sizes/src/: main.rs
lambda/integrations/umbraco-heartcore/: Cargo.toml
lambda/integrations/umbraco-heartcore/src/: main.rs
lambda/src/: main.rs
migration/: Cargo.toml
migration/src/: main.rs
