[package]
name = "lambda_s3_thumbnail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ['openssl/vendored']

[dependencies]
openssl = { version = "0.10.35", features = ["vendored"] }
lambda_runtime = "0.4"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
image = "0.24"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde_json = "1.0"
futures-util = "0.3"
log = "0.4"
simple_logger = "1.0"
